--- a/main/templates/get.html
+++ b/main/templates/get.html
@@ -2,24 +2,12 @@
 {% timezone "America/Los_Angeles" %}
 Submit by {{name}} at {{ date|date:"D d M Y" }} {{ date|time:"H:i" }}.
 <br>
-<div id="player"></div>
+
+<iframe id="player" src="http://www.youtube.com/embed/{{url}}?enablejsapi=1&origin=http://example.com" frameborder="0"></iframe>
 
 <script>
-  // 2. This code loads the IFrame Player API code asynchronously.
-  var tag = document.createElement('script');
-
-  tag.src = "https://www.youtube.com/iframe_api";
-  var firstScriptTag = document.getElementsByTagName('script')[0];
-  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-  // 3. This function creates an <iframe> (and YouTube player)
-  //    after the API code downloads.
-  var player;
   function onYouTubeIframeAPIReady() {
 	player = new YT.Player('player', {
-	  height: '390',
-	  width: '640',
-		videoId: '{{url}}',
 	  events: {
 		'onReady': onPlayerReady,
 		'onStateChange': onPlayerStateChange,
