--- a/main/templates/get.html
+++ b/main/templates/get.html
@@ -2,33 +2,41 @@
 {% timezone "America/Los_Angeles" %}
 Submit by {{name}} at {{ date|date:"D d M Y" }} {{ date|time:"H:i" }}.
 <br>
+    <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+    <div id="player"></div>
 
-<iframe width='640' height='390' id="player" src='http://www.youtube.com/embed/{{url}}?enablejsapi=1' frameborder="0"></iframe>
+    <script>
+      // 2. This code loads the IFrame Player API code asynchronously.
+      var tag = document.createElement('script');
 
-<script>
-  function onYouTubeIframeAPIReady() {
-        Object.defineProperty(document, "referrer", {get : function(){ return "localhost"; }});
+      tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
-	player = new YT.Player('player', {
+      // 3. This function creates an <iframe> (and YouTube player)
+      //    after the API code downloads.
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
           height: '390',
           width: '640',
-
-	  events: {
-		'onReady': onPlayerReady,
-		'onStateChange': onPlayerStateChange,
+          videoId: '{{url}}',
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange': onPlayerStateChange,
 		'onError': onError
-	  }
-	});
-  }
+          }
+        });
+      }
 
-  // 4. The API will call this function when the video player is ready.
-  function onPlayerReady(event) {
-	event.target.playVideo();
-  }
+      // 4. The API will call this function when the video player is ready.
+      function onPlayerReady(event) {
+        event.target.playVideo();
+      }
 
-  // 5. The API calls this function when the player's state changes.
-  //    The function indicates that when playing a video (state=1),
-  //    the player should play for six seconds and then stop.
+      // 5. The API calls this function when the player's state changes.
+      //    The function indicates that when playing a video (state=1),
+      //    the player should play for six seconds and then stop.
   function onPlayerStateChange(event) {
 	if (event.data == YT.PlayerState.ENDED) {
 	  setTimeout(redirect, 1000);
@@ -40,7 +48,11 @@ Submit by {{name}} at {{ date|date:"D d M Y" }} {{ date|time:"H:i" }}.
   function redirect() {
 	  location = "/{{id|add:"1"}}"
   }
-</script>
+      function stopVideo() {
+        player.stopVideo();
+      }
+    </script>
+
 
 <br>
 <a href="/{% if id == "1" %}1{% else %}{{id|add:"-1"}}{% endif %}">Previous</a> <a href="/{{id|add:"1"}}">Next</a>
