Use youtube-nocookie for better user privacy

--- a/music_app/templates/music_app/get.html
+++ b/music_app/templates/music_app/get.html
@@ -16,8 +16,9 @@
     {% endtimezone %}
     <br>
     <div class="row">
-        <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-        <div id="player"></div>
+        <iframe id="player" type="text/html" width="640" height="390"
+                src="http://www.youtube-nocookie.com/embed/{{entry.link}}?enablejsapi=1&origin=http://{{domain}}"
+                frameborder="0"></iframe>
     </div>
 
     <script>
@@ -33,9 +34,6 @@
       var player;
       function onYouTubeIframeAPIReady() {
         player = new YT.Player('player', {
-          height: '390',
-          width: '640',
-          videoId: '{{entry.link}}',
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange,
