Put <link> inside <head>

--- a/music_app/templates/music_app/add.html
+++ b/music_app/templates/music_app/add.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-<head><title>Add music</title></head>
+<head>
+    <title>Add music</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
 
 <!-- SORRY FOR USELESS JS -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
