--- a/music_app/templates/music_app/get.html
+++ b/music_app/templates/music_app/get.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-<head><title>Song {{ id }}</title></head>
+<head>
+    <title>Song {{ id }}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
 
 <br>
 <div class="container">
@@ -66,6 +67,7 @@
       function stopVideo() {
         player.stopVideo();
       }
+
 
     </script>
     {%else%}
