--- a/music_app/templates/music_app/header.html
+++ b/music_app/templates/music_app/header.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">First</a>
+                <a class="nav-link" href="{% url 'get music' musicid=1 %}">First</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'latest' %}">Latest</a>
