Add <body> tags because that's a thing

--- a/music_app/templates/music_app/add.html
+++ b/music_app/templates/music_app/add.html
@@ -39,9 +39,8 @@
 
 </script>
 
+<body>
 {% include "music_app/header.html" %}
-
-
 <br><br>
 <div class="container">
     <div class="row">
@@ -71,4 +70,4 @@
         <div class="col-md-2"></div>
     </div>
 </div>
-
+</body>
