--- a/music_app/templates/music_app/get.html
+++ b/music_app/templates/music_app/get.html
@@ -6,6 +6,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
+<body>
 {% include "music_app/header.html" %}
 
 <br>
@@ -97,3 +98,4 @@
         </div>
     </div>
 </div>
+</body>
