Add a really awful index page

--- a/music_app/templates/music_app/add.html
+++ b/music_app/templates/music_app/add.html
@@ -49,11 +49,11 @@
             <form id="submit" action=''>
 
                 <div class="form-group">
-                    <label for="name">Name:</label>
+                    <label for="name">Name</label>
                     <input name="name" id="name" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="url">Url:</label>
+                    <label for="url">Url</label>
                     <input name="url" id="url" class="form-control">
                 </div>
                 <button id="button" type=button class="btn btn-success">Submit</button>
