--- a/music_app/templates/music_app/header.html
+++ b/music_app/templates/music_app/header.html
@@ -1,5 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+
+<nav class="navbar navbar-expand-sm bg-info navbar-dark">
     <a class="navbar-brand" href="{% url 'index' %}">TelegraMusic</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
