--- a/music_app/templates/music_app/get.html
+++ b/music_app/templates/music_app/get.html
@@ -75,8 +75,10 @@
     </script>
     {%else%}
     <div class="row">
-        This id doesn't exist!
+        This id doesn't exist yet!
     </div>
+    <br>
+    <div class="row"><a href="{% url 'get music' musicid=id %}">Try again?</a></div>
     {%endif%}
     <br>
     <div class="row">
