--- a/music_app/templates/music_app/get.html
+++ b/music_app/templates/music_app/get.html
@@ -19,6 +19,15 @@
             Submitted by {{entry.added_by}} at {{ entry.date_added|date:"D d M Y" }} {{ entry.date_added|time:"H:i" }}.
         </div>
     </div>
+    <div class="row">
+        <div class="col">
+            <form>
+                <input type="checkbox" id="shuffle" onchange="handleCheckbox(this)" {% if shuffle %} checked {%endif%}>
+                &nbsp;<label for="shuffle">Shuffle
+            </label>
+            </form>
+        </div>
+    </div>
     {% endtimezone %}
     <br>
     <div class="row">
@@ -43,7 +52,7 @@
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange,
-		'onError': onError
+		    'onError': onError
           }
         });
       }
@@ -65,12 +74,24 @@
 	setTimeout(redirect, 10000)
   }
   function redirect() {
-	  location = "{% url 'get music' musicid=id|add:1 %}"
+      if (!shuffle) {
+	    location = "{% url 'get music' musicid=id|add:1 %}";
+	  } else {
+	    location = "{% url 'random' %}?shuffle=true";
+	  }
   }
       function stopVideo() {
         player.stopVideo();
       }
 
+/* monitor whether shuffle is checked with a glocal variable
+   This is probably horrible JS but I don't know any better */
+
+var shuffle = {{shuffle}};
+
+function handleCheckbox(checkbox) {
+    shuffle = checkbox.checked;
+}
 
     </script>
     {%else%}
