Add browse view and update entries at the appropriate place

--- a/music_app/templates/music_app/header.html
+++ b/music_app/templates/music_app/header.html
@@ -13,6 +13,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'latest' %}">Latest</a>
             </li>
+            <li>
+                <a class="nav-link" href="{% url 'browse'%}">Browse</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'random' %}">Random</a>
             </li>
