Add a lil' header

--- a/music_app/templates/music_app/browse.html
+++ b/music_app/templates/music_app/browse.html
@@ -10,6 +10,8 @@
 {% include "music_app/header.html" %}
 <br>
 <div class="container">
+    <div class="row"><h2>Browse Music</h2></div>
+    <br>
     {% for entry in entries %}
     <div class="row">
         <div class="col-xs-1">
