use https links

--- a/music_app/templates/music_app/add.html
+++ b/music_app/templates/music_app/add.html
@@ -7,7 +7,7 @@
 </head>
 
 <!-- SORRY FOR USELESS JS -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
 
 <script>
     function f() {
