--- a/music_app/templates/music_app/get.html
+++ b/music_app/templates/music_app/get.html
@@ -32,7 +32,7 @@
     <br>
     <div class="row">
         <iframe id="player" type="text/html" width="640" height="390"
-                src="https://www.youtube-nocookie.com/embed/{{entry.link}}?enablejsapi=1&origin=http://{{domain}}&rel=0&playsinline=1"
+                src="https://www.youtube-nocookie.com/embed/{{entry.link}}?enablejsapi=1&origin=https://{{domain}}&rel=0&playsinline=1"
                 frameborder="0"></iframe>
     </div>
 
